@@ -1,3 +1,6 @@
+* 2005-11-27 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Add GetClick command. Returns position on axes for user's click
+
 * 2005-11-23 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Add Pointer button, and enable graph zooming
 	- Add EnableToolbar embedded command to enable graph toolbar
